--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title></title>
   </head>
   <body>
-    <script src="script.js">
 
-    </script>
+
+  <script>
+    console.log('My name is Dima!');
+  </script>
   </body>
 </html>
